# mcp-test-cloud-ops

./: .env  Dockerfile  README.md  mcp.json  pyproject.toml  requirements.txt  server.py
mcp_test_cloud_ops/: __init__.py  server.py
web/: auth.js
